[gd_scene load_steps=5 format=2]

[ext_resource path="res://Themes/fonts/OpenSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Themes/vole_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/ClassroomStudent.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -131, 54 )
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 0.8, 1 )

[node name="ClassroomNameLabel" type="Label" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -286.0
margin_right = 162.0
margin_bottom = -225.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "My Classroom"
align = 1
valign = 2

[node name="MenuBtn" type="Button" parent="ColorRect"]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = -111.0
margin_right = -201.76
margin_bottom = -61.0
text = "Back To Menu"

[node name="JoinClassroomBtn" type="Button" parent="ColorRect"]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = -21.0
margin_right = -201.76
margin_bottom = 29.0
rect_pivot_offset = Vector2( 280, 40 )
text = "Join Classroom"

[node name="LeaveClassroomBtn" type="Button" parent="ColorRect"]
anchor_left = 0.49
anchor_top = 0.5
anchor_right = 0.49
anchor_bottom = 0.5
margin_left = -451.76
margin_top = 69.0
margin_right = -201.76
margin_bottom = 119.0
rect_pivot_offset = Vector2( 280, 40 )
text = "Leave Classroom"

[node name="ColorRect" type="ColorRect" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -113.0
margin_top = -111.0
margin_right = 460.0
margin_bottom = 249.0
color = Color( 0.827451, 0.827451, 0.827451, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -285.5
margin_top = -179.0
margin_right = -2.5
margin_bottom = 180.0

[node name="Label" type="Label" parent="ColorRect/ColorRect/VBoxContainer"]
margin_right = 283.0
margin_bottom = 23.0
text = "Assignment 0"

[node name="VBoxContainer2" type="VBoxContainer" parent="ColorRect/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 187.5
margin_top = -179.0
margin_right = 285.5
margin_bottom = 180.0

[node name="Button" type="Button" parent="ColorRect/ColorRect/VBoxContainer2"]
margin_right = 98.0
margin_bottom = 28.0
text = "View"

[node name="ClassroomName" type="Label" parent="ColorRect"]
margin_left = 555.0
margin_top = 157.0
margin_right = 838.0
margin_bottom = 180.0
align = 1

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="ColorRect/MenuBtn" to="." method="_on_MenuBtn_pressed"]
[connection signal="pressed" from="ColorRect/JoinClassroomBtn" to="." method="_on_JoinClassroomBtn_pressed"]
[connection signal="pressed" from="ColorRect/LeaveClassroomBtn" to="." method="_on_LeaveClassroomBtn_pressed"]
